fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ footer {
      font-size: 13pt;
      line-height: 160%;
      color: #333;
-     margin-top: 35px;
+     margin-top: 20px;
  }
 
  .twitter-timeline {
@@ -733,7 +733,6 @@ lead {
     margin-left: 5px;
     display: inline-block;
     float:center;
-    margin-bottom: 15px;
   }
 
   #logodiv{
@@ -804,6 +803,13 @@ lead {
 @media only screen and (max-width: 560px) {
   #vid{
     width: 300px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .removable{
+    height: 0px;
+    padding-top: 0px!important;
+    padding-bottom: 0px!important;
   }
 }
 
